public interface TakeWeapon{
	public void takeWeapon(Weapons weapon);
}