package humans;
public enum Status{
	ALIVE,
	DEAD,
	IN_CAPTIVITY
}