package interfaces;
import interactionWithHuman.Emotions;
public interface Feel{
    void feel(Emotions e);
}
