package interfaces;
import interactionWithHuman.Sound;
public interface Hear {
    void hear(Sound s);
}
