package interfaces;

import interactionWithHuman.Hallucinations;

public interface See {
    void see(Hallucinations h);
}
