package nature;
public class Bodies{
  public void hangDown(Gallows g){
  System.out.println("The strangely twisted bodies of the unfortunate disappeared squatters hung from " + g.getAmount() + " gallows");
  }
}
