package nature;
import teams.TeamOfAborigines;
public class Bonfire{
  public void burn(TeamOfAborigines t1){
    System.out.println("The fire is burning");
    t1.haveFun();
  }
}
