package things;

public class Sound{
	private String source = "forest";
	public String getSource(){
		return source;
	}
}