package world;
public enum Locations{
   NEW_ORLEANS,
   ROAD,
   FOREST,
   VILLAGE,
   UNKNOWN_AREA,
   SWAMP,
   POLICE_STATION
}